[tool.poetry]
name = "matrixprofile"
version = "1.1.10-666"
description = "As a workaround patch for milelync"
authors = ["theo chang <theo.chang@mile.cloud>"]

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.16.2"
matplotlib = ">=3.0.3"
pytest = ">=3.5.1"
setuptools = ">=39.1.0"
Cython = ">=0.x"
protobuf = ">=3.11.2,<4.0.0"
scipy = ">=1.3.2,<2.0.0"
Sphinx = "^4.3.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "1.0.0"
wheel = "^0.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
